@@ -1,5 +1,7 @@
 *.DS_Store
-build
+.idea
+cmake-build-debug
+cmake-build-release
 Libs\SFML
 Libs\SQLite
 Libs\Lua
