@@ -1,4 +1,4 @@
-#include "SFML/Graphics.hpp"
+#include <SFML/Graphics.hpp>
 #include <iostream>
 #include "Database/DatabaseConnection.hpp"
 #include "Resource/FontManager.hpp"
